--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "js/reveal.js",
   "scripts": {
     "test": "grunt test",
-    "start": "grunt serve"
+    "start": ""
   },
   "author": {
     "name": "Hakim El Hattab",
