--- a/plugin/multiplex/package.json
+++ b/plugin/multiplex/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "~4.13.3",
+    "morgan": "~1.7.0",
     "grunt-cli": "~0.1.13",
     "mustache": "~2.2.1",
     "socket.io": "~1.3.7"
