--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "express": "~4.14.0",
+    "morgan": "~1.7.0",
     "font-awesome": "^4.7.0",
     "foundation-icon-fonts": "^0.1.1",
     "grunt-cli": "~1.2.0",
